<resources>
    <string name="app_name">project team</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appName">Team management</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- Facebook-->
    <string name="facebook_app_id">776591219505029</string>
    <string name="fb_login_protocol_scheme">fb776591219505029</string>
    <string name="first_name">First name</string>
    <string name="description">Description</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="skill_of">Skill of</string>
    <string name="textGraph">กราฟแสดงร้อยละของคะแนนที่ได้</string>
    <string name="back">กลับ</string>
    <string name="name">Name</string>
    <string name="logout">ออกจากระบบ</string>
    <string name="team_management">Team management</string>
    <string name="choose">เลือก</string>

</resources>
