<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recyview_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EBBEF3"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/todo"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/prompt_medium"
            android:text="@string/first_name"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/positon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/prompt_medium"
            android:text="@string/description"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
