<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBBEF3"
    tools:context=".Authen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center">

        <TextView
            android:id="@+id/textAppName"
            android:layout_width="353dp"
            android:layout_height="107dp"
            android:layout_marginTop="276dp"
            android:fontFamily="@font/prompt_medium"
            android:foregroundGravity="center"
            android:text="@string/appName"
            android:textAlignment="center"
            android:textColor="#9C27B0"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="278dp"
            android:layout_height="62dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="#F4F2F4"
            android:backgroundTint="#179C27B0"
            android:ems="10"
            android:fontFamily="@font/prompt_medium"
            android:foregroundGravity="center"
            android:gravity="center|center_horizontal"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#F1F1F1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textAppName" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="283dp"
            android:layout_height="60dp"
            android:layout_marginTop="36dp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/prompt_medium"
            android:foregroundGravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/btnLoginFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintVertical_bias="0.142" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="278dp"
            android:layout_height="62dp"
            android:layout_marginTop="20dp"
            android:background="#F4F2F4"
            android:backgroundTint="#179C27B0"
            android:ems="10"
            android:fontFamily="@font/prompt_medium"
            android:foregroundGravity="center"
            android:gravity="center|center_horizontal"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="202dp"
            android:layout_height="221dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/man"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.054" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>