<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentMemberOfTeam">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#DD2EFB">

            <TextView
                android:id="@+id/titleMenu"
                android:layout_width="196dp"
                android:layout_height="34dp"
                android:fontFamily="@font/prompt_medium"
                android:shadowColor="#000"
                android:text="@string/team_management"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.827"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.15" />

            <TextView
                android:id="@+id/textUsername"
                android:layout_width="162dp"
                android:layout_height="61dp"
                android:layout_below="@id/iv_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="68dp"
                android:fontFamily="@font/prompt_medium"
                android:shadowColor="#000000"
                android:shadowDx="10"
                android:text="@string/name"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.763"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="170dp"
                android:layout_height="46dp"
                android:layout_gravity="center"
                android:layout_marginTop="136dp"
                android:background="#7C9C27B0"
                android:fontFamily="@font/prompt_medium"
                android:text="@string/logout"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.788"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="141dp"
                android:layout_height="141dp"
                android:src="@drawable/man"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.059"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.288" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>


</FrameLayout>